Format gem recycle for SlashRecycle